2004-03-14  ujwal

	* Completed required aspects of new bookmark editor. 

2004-03-14  fabian

	* Completed new UI for terminal profile editor.
	
2004-03-13  ujwal
	
	* Completed new UI for display profile editor.

2004-03-11  fabian

	* Fixes of several margin related bugs (bg image, size calculation...)
	
2004-03-10  fabian

	* Fixed bug in scrolling
	
2004-03-10  ujwal

	* Adjusted selection code to accommodate newly added margin.
	* Fixed yet another selection/CR problem.

2004-03-09  fabian

	* Added margins on the side.
	* Fixed "fast-quit-causing-hangup" problem.
	
2004-03-09  ujwal

	* Fixed a copy/save bug triggered by some blank spaces NOT at end of line.

2004-03-08  ujwal

	* Created a new window controller class for the profiles window.

2004-03-07  ujwal

	* Checking in new preferences UI. Backend code for Color and 
	  Terminal, and Bookmark editor still needs to be done.
	* Fixed [PTYTextView selectedText] and [PTYTextView contentFromX: Y: ToX: Y:] 
	  so that '\n' is inserted only on a hard wrap.
	* Added key mapping action "ignore" to throw away key events.
	* Added support to specify characters to be considered part of word. Will add 
	  regex support later.

2004-03-06  fabian

	* Fixed a bug in VT100Screen that causes crashes.
	* Updated html files.
		
2004-03-05  ujwal
	
	* Made option key setting part of keyboard profile.
	* Built proposed UI for new preferences.

2004-03-04  ujwal

	* Fixed "Send Input to All Tabs" and "Paste".
	* Fixed selection of complete line by dragging.
	* Fixed +ESC behaviour.
	* Changed data structure for key bindings.
	  Previously saved key bindings will be lost :-( Sorry.

2004-03-03  ujwal

	* Made application of transparency more consistent.
	* Common keymapping profile is searched last for a keybinding match.
	* Fixed "select all" in text view.

2004-03-03  fabian

	* Rewrite the selection code. Faster and more consistent.
	
2004-03-02  fabian

	* Fixed bug in copy&paste
	
2004-03-02  ujwal
