@@ -75,7 +75,6 @@
     BOOL waiting;
     BOOL autoClose;
     BOOL doubleWidth;
-    BOOL remapDeleteKey;
     NSString *backgroundImagePath;
     //NSFont *configFont;
     NSDictionary *addressBookEntry;
@@ -172,8 +171,6 @@
 - (void) setAddressBookEntry:(NSDictionary*) entry;
 - (int) number;
 - (NSString *) tty;
-- (BOOL) remapDeleteKey;
-- (void) setRemapDeleteKey: (BOOL) flag;
 
 - (void)clearBuffer;
 - (void)clearScrollbackBuffer;
