@@ -1,6 +1,8 @@
 2004-03-14  ujwal
 
 	* Completed required aspects of new bookmark editor. 
+	* Removed remapping of delete key function. Handled by 
+	  custom key mapping.
 
 2004-03-14  fabian
 
